correction horizontal  scrollbar sessions

--- a/app/assets/stylesheets/brandscopic.less
+++ b/app/assets/stylesheets/brandscopic.less
@@ -4924,6 +4924,16 @@ body.campaigns_report, body.staff_report {
 	}
 }
 
+// Sessions
+
+body{
+	&.sessions{
+		.alert{
+			margin: 0;
+		}
+	}
+}
+
 // Modal Table List
 .scroll-table-content {
   border: 1px solid @borders;
